# Hydrogen_GWP

./: .gitignore  GWP_different_time_horizons.ipynb  GWP_figures.ipynb  GWP_notebook.ipynb  GWP_notebook_withuncertainty.ipynb  GWP_notebook_withuncertainty_modelmean.ipynb  GWP_uncertainty_OsloCTMbase.ipynb  Makefile  Note_on_how_to_combine_methane_and_hydrogen_experiments.ipynb  README.md  budget_figure.ipynb  budget_table_ch4.ipynb  hydrogen_figures.ipynb  kladd.ipynb  make_figures_per_flux.ipynb  make_figures_per_flux_combined.ipynb  make_figures_per_flux_combined_harmonized_soil_sink.ipynb  setup.cfg
input/: CH4_burden.txt  CH4_loss.txt  CH4_surfconc.txt  H2O_rf.txt  H2O_rf_gfdl.txt  H2_atm_loss.txt  H2_atm_prod.txt  H2_burden.txt  H2_drydep.txt  H2_surfconc.txt  OSLOCTM3-emi_burden-CH4.csv  OSLOCTM3-emi_burden-H2.csv  OSLOCTM3-emi_emissions_H2.csv  OSLOCTM3-emi_prod-loss-CH4_all_YR10.csv  OSLOCTM3-emi_prod-loss-CH4_all_YR13.csv  OSLOCTM3-emi_prod-loss-CH4_all_YR2.csv  OSLOCTM3-emi_prod-loss-CH4_all_YR5.csv  OSLOCTM3-emi_prod-loss-H2_all_YR10.csv  OSLOCTM3-emi_prod-loss-H2_all_YR13.csv  OSLOCTM3-emi_prod-loss-H2_all_YR2.csv  OSLOCTM3-emi_prod-loss-H2_all_YR5.csv  OSLOCTM3-emi_surfconc-CH4.csv  OSLOCTM3-emi_surfconc-H2.csv  RF_NRFmethod_OsloCTM3_senstest_yr10_net_yearly.csv  RF_NRFmethod_OsloCTM3_senstest_yr20_net_yearly.csv  RF_NRFmethod_OsloCTM3_senstest_yr26_net_yearly.csv  aerosol_rf.txt  ozone_du_strat.txt  ozone_du_strat_6060.txt  ozone_du_strat_gt60.txt  ozone_du_trop.txt  ozone_rf.txt  strat_h2o_h2.csv
input_ssp/: OSLOCTM3-emi_burden-CH4.csv  OSLOCTM3-emi_burden-H2.csv  (+14 more)
(+64 files in other folders)
