[metadata]
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ==3.7
install_requires =
    pandas
    matplotlib

[options.packages.find]
where = src

[options.extras_require]
notebooks =
    ipywidgets
    notebook
    seaborn

tests =
    codecov
    coverage
    nbval
    pytest-cov
    pytest>=4.0
    xlrd
dev =
    bandit
    black == 22.3.0
    black-nb
    flake8
    isort == 5.10.1
    mypy
    nbdime
    pydocstyle
    pylint == 2.14.5
    %(notebooks)s
    %(tests)s

[flake8]
max-line-length = 88
ignore = E203, E266, E501, W503

[isort]
default_section = THIRDPARTY
# comma after multiline breaks like black:
include_trailing_comma = true
known_first_party = openscm_runner
profile = black

[mypy]
disallow_incomplete_defs = true
disallow_subclassing_any = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[pydocstyle]
# D213 - Multi-line docstring summary should start at the second line
# D402 - First line should not be the signature of the function
add_select = D213, D402
# D200 - One-line docstring should fit on one line with quotes
# D205 - 1 blank line required between summary line and description
# D400 - First line should end with a period
add_ignore = D200, D205, D400
convention = numpy
inherit = false
match = (?!test_|_version).*\.py

[tool:pytest]
testpaths = tests
